@@ -1,6 +1,7 @@
 18 February 2019: Wouter
 	- Print query name with ip_ratelimit exceeded log lines.
 	- Spaces instead of tabs in that log message.
+	- Print query name and IP address when domain rate limit exceeded.
 
 14 February 2019: Wouter
 	- Fix capsforid canonical sort qsort callback.
